more static site work

--- a/upload/shop/localhost/en-gb/information/about-us/index.html
+++ b/upload/shop/localhost/en-gb/information/about-us/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Site Map</title>
+  <title>About Us</title>
   <base href="http://localhost/opencart-master/upload/"/>
       <link href="catalog/view/stylesheet/stylesheet.css" type="text/css" rel="stylesheet"/>
   <script src="catalog/view/javascript/jquery/jquery-3.7.1.min.js" type="text/javascript"></script>
@@ -27,7 +27,7 @@
                         </ul>
     </div>
     <input type="hidden" name="code" value=""/>
-    <input type="hidden" name="redirect" value="http://localhost/opencart-master/upload/en-gb/sitemap?DOCUMENT_ROOT=C%3A/xampp/htdocs&amp;REQUEST_FILENAME=C%3A/xampp/htdocs/opencart-master/upload/en-gb&amp;REQUEST_URI=/opencart-master/upload/en-gb/sitemap//"/>
+    <input type="hidden" name="redirect" value="http://localhost/opencart-master/upload/en-gb/information/about-us?DOCUMENT_ROOT=C%3A/xampp/htdocs&amp;REQUEST_FILENAME=C%3A/xampp/htdocs/opencart-master/upload/en-gb&amp;REQUEST_URI=/opencart-master/upload/en-gb/information/about-us//"/>
   </form>
 </li>
               <li class="list-inline-item"></li>
@@ -181,132 +181,17 @@
   </div>
 
 
-<div id="information-sitemap" class="container">
+<div id="information-information" class="container">
   <ul class="breadcrumb">
-          <li class="breadcrumb-item"><a href="http://localhost/opencart-master/upload/en-gb?route=common/home/"><i class="fas fa-home"></i></a></li>
-          <li class="breadcrumb-item"><a href="http://localhost/opencart-master/upload/en-gb/sitemap/">Site Map</a></li>
+        <li class="breadcrumb-item"><a href="http://localhost/opencart-master/upload/en-gb?route=common/home/"><i class="fas fa-home"></i></a></li>
+        <li class="breadcrumb-item"><a href="http://localhost/opencart-master/upload/en-gb/information/about-us/">About Us</a></li>
       </ul>
   <div class="row">
     <div id="content" class="col">
-      <h1>Site Map</h1>
-      <div class="row">
-        <div class="col-sm-6">
-          <ul>
-                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/desktops/">Desktops</a>
-                                  <ul>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/desktops/pc/">PC</a>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/desktops/mac/">Mac</a>
-                                              </li>
-                                      </ul>
-                              </li>
-                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/laptop-notebook/">Laptops &amp; Notebooks</a>
-                                  <ul>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/laptop-notebook/macs/">Macs</a>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/laptop-notebook/windows/">Windows</a>
-                                              </li>
-                                      </ul>
-                              </li>
-                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/component/">Components</a>
-                                  <ul>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/component/mouse/">Mice and Trackballs</a>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/component/monitor/">Monitors</a>
-                                                  <ul>
-                                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/component/monitor/test-1/">test 1</a></li>
-                                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/component/monitor/test-2/">test 2</a></li>
-                                                      </ul>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/component/printers/">Printers</a>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/component/scanner/">Scanners</a>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/component/web-camera/">Web Cameras</a>
-                                              </li>
-                                      </ul>
-                              </li>
-                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/tablet/">Tablets</a>
-                              </li>
-                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/software/">Software</a>
-                              </li>
-                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/smartphone/">Phones &amp; PDAs</a>
-                              </li>
-                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/cameras/">Cameras</a>
-                              </li>
-                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/mp3-players/">MP3 Players</a>
-                                  <ul>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/mp3-players/test-11/">test 11</a>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/mp3-players/test-12/">test 12</a>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/mp3-players/test-15/">test 15</a>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/mp3-players/test-16/">test 16</a>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/mp3-players/test-17/">test 17</a>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/mp3-players/test-18/">test 18</a>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/mp3-players/test-19/">test 19</a>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/mp3-players/test-20/">test 20</a>
-                                                  <ul>
-                                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/mp3-players/test-20/test-25/">test 25</a></li>
-                                                      </ul>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/mp3-players/test-21/">test 21</a>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/mp3-players/test-22/">test 22</a>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/mp3-players/test-23/">test 23</a>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/mp3-players/test-24/">test 24</a>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/mp3-players/test-4/">test 4</a>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/mp3-players/test-5/">test 5</a>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/mp3-players/test-6/">test 6</a>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/mp3-players/test-7/">test 7</a>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/mp3-players/test-8/">test 8</a>
-                                              </li>
-                                          <li><a href="http://localhost/opencart-master/upload/en-gb/catalog/mp3-players/test-9/">test 9</a>
-                                              </li>
-                                      </ul>
-                              </li>
-                      </ul>
-        </div>
-        <div class="col-sm-6">
-          <ul>
-            <li><a href="http://localhost/opencart-master/upload/en-gb/special/">Special Offers</a></li>
-            <li><a href="http://localhost/opencart-master/upload/en-gb?route=account/account/">My Account</a>
-              <ul>
-                <li><a href="http://localhost/opencart-master/upload/en-gb?route=account/edit/">Edit Information</a></li>
-                <li><a href="http://localhost/opencart-master/upload/en-gb/password/">Password</a></li>
-                <li><a href="http://localhost/opencart-master/upload/en-gb/address/">Address Book</a></li>
-                <li><a href="http://localhost/opencart-master/upload/en-gb?route=account/order/">Order History</a></li>
-                <li><a href="http://localhost/opencart-master/upload/en-gb/download/">Downloads</a></li>
-              </ul>
-            </li>
-            <li><a href="http://localhost/opencart-master/upload/en-gb?route=checkout/cart/">Shopping Cart</a></li>
-            <li><a href="http://localhost/opencart-master/upload/en-gb?route=checkout/checkout/">Checkout</a></li>
-            <li><a href="http://localhost/opencart-master/upload/en-gb/search/">Search</a></li>
-            <li>Information
-              <ul>
-                                  <li><a href="http://localhost/opencart-master/upload/en-gb/information/terms/">Terms &amp; Conditions</a></li>
-                                  <li><a href="http://localhost/opencart-master/upload/en-gb/information/delivery/">Delivery Information</a></li>
-                                  <li><a href="http://localhost/opencart-master/upload/en-gb/information/about-us/">About Us</a></li>
-                                  <li><a href="http://localhost/opencart-master/upload/en-gb/information/privacy/">Privacy Policy</a></li>
-                                <li><a href="http://localhost/opencart-master/upload/en-gb/contact/">Contact Us</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-      </div>
+      <h1>About Us</h1>
+      <p>
+	About Us</p>
+</div>
     </div>
 </div>
 </main>
@@ -361,4 +246,3 @@ Please donate via PayPal to donate@opencart.com
 <script src="catalog/view/javascript/bootstrap/js/bootstrap.bundle.min.js" type="text/javascript"></script>
 <script src="./catalog/view/javascript/framework/webcomponent.js" type="module"></script>
 </body></html>
-
