more js changes

--- a/upload/index.html
+++ b/upload/index.html
@@ -9,9 +9,9 @@
   <script src="./catalog/view/javascript/index.js" type="module"></script>
 </head>
 <body>
-  <fcommon-header></fcommon-header>
-  <fcommon-menu></fcommon-menu>
-  <common-home></common-home>
+  <common-header></common-header>
+  <common-menu></common-menu>
+  <account-register></account-register>
   <common-footer></common-footer>
 </body>
 </html>
