more js changes

--- a/upload/index.html
+++ b/upload/index.html
@@ -12,7 +12,7 @@
 <div id="container" class="d-flex flex-column min-vh-100">
   <div id="alert"></div>
   <common-header></common-header>
-  <gcommon-menu></gcommon-menu>
+  <common-menu></common-menu>
   <main class="flex-grow-1 mb-4">
     <account-register></account-register>
   </main>
