--- a/upload/index.html
+++ b/upload/index.html
@@ -5,18 +5,24 @@
   <title></title>
   <base href="http://localhost/opencart-master/upload/"/>
   <link href="./catalog/view/stylesheet/stylesheet.css" type="text/css" rel="stylesheet"/>
-  <script src="./assets/bootstrap/js/bootstrap.bundle.min.js" type="module"></script>
-  <script src="./catalog/view/javascript/index.js" type="module"></script>
 </head>
 <body>
-<div id="container" class="d-flex flex-column min-vh-100">
+<div id="container">
   <div id="alert"></div>
   <common-header></common-header>
-  <common-menu></common-menu>
   <main class="flex-grow-1 mb-4">
-    <account-register></account-register>
+    <common-menu></common-menu>
+    <div class="container">
+      <div class="row">
+        <div id="content" class="col">
+          <account-register></account-register>
+        </div>
+      </div>
+    </div>
   </main>
   <common-footer></common-footer>
 </div>
+<script src="./assets/bootstrap/js/bootstrap.bundle.min.js" type="module"></script>
+<script src="./catalog/view/javascript/index.js" type="module"></script>
 </body>
 </html>
