created a light weight template engine.

--- a/upload/index.html
+++ b/upload/index.html
@@ -8,27 +8,24 @@
 </head>
 <body>
 <div id="container">
-  <div id="alert"></div>
-  <common-header></common-header>
-  <main class="flex-grow-1 mb-4">
-    <common-menu></common-menu>
-    <div class="container">
-      <div class="row">
-        <div id="content" class="col">
-          <catalog-product></catalog-product>
+  <!--
+    <div id="alert"></div>
+    <common-header></common-head  <!--
 
 
 
-          <account-login></account-login>
-          <account-edit></account-edit>
-          <account-register></account-register>
-          <account-forgotten></account-forgotten>
-
+    <main class="flex-grow-1 mb-4">
+      <common-menu></common-menu>
+      <div class="container">
+        <div class="row">
+          <div id="content" class="col"><account-register></account-register></div>
         </div>
       </div>
-    </div>
-  </main>
-  <common-footer></common-footer>
+    </main>
+
+
+    <common-footer></common-footer>
+  -->
 </div>
 <script src="./assets/bootstrap/js/bootstrap.bundle.min.js" type="module"></script>
 <script src="./catalog/view/javascript/index.js" type="module"></script>
